--- a/package.json
+++ b/package.json
@@ -49,20 +49,23 @@
     "expo-web-browser": "~14.0.1",
     "iconsax-react-native": "^0.0.8",
     "lottie-react-native": "^7.2.2",
+    "lucide-react-native": "^0.501.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.55.0",
     "react-native": "0.76.9",
     "react-native-collapsible": "^1.6.2",
+    "react-native-collapsible-tab-view": "^8.0.1",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-colors": "^2.4.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-progress": "^5.0.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
