--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "prebuild": "npx expo prebuild",
     "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -31,12 +32,14 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "^16.0.14",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.19",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-image": "^2.0.7",
+    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
     "expo-location": "^18.0.10",
