--- a/package.json
+++ b/package.json
@@ -1,94 +1,97 @@
 {
-  "name": "spoter",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "prebuild": "npx expo prebuild",
-    "start": "expo start --dev-client",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/slider": "^4.5.6",
-    "@react-native-seoul/masonry-list": "^1.4.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/material-top-tabs": "^7.2.10",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "@rnmapbox/maps": "^10.1.38",
-    "@shopify/flash-list": "^1.7.3",
-    "@tanstack/react-query": "^5.64.2",
-    "axios": "^1.7.9",
-    "dayjs": "^1.11.13",
-    "expo": "~52.0.23",
-    "expo-blur": "~14.0.1",
-    "expo-build-properties": "~0.13.2",
-    "expo-camera": "^16.0.14",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.19",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "^2.0.7",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-location": "^18.0.10",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
-    "iconsax-react-native": "^0.0.8",
-    "lottie-react-native": "^7.2.2",
-    "lucide-react-native": "^0.501.0",
-    "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.55.0",
-    "react-native": "0.76.9",
-    "react-native-collapsible": "^1.6.2",
-    "react-native-collapsible-tab-view": "^8.0.1",
-    "react-native-confirmation-code-field": "^7.4.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-image-colors": "^2.4.0",
-    "react-native-pager-view": "^6.7.0",
-    "react-native-progress": "^5.0.1",
-    "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "private": true
+    "name": "spoter",
+    "main": "expo-router/entry",
+    "version": "1.0.0",
+    "scripts": {
+        "prebuild": "npx expo prebuild",
+        "start": "expo start --dev-client",
+        "reset-project": "node ./scripts/reset-project.js",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web",
+        "test": "jest --watchAll",
+        "lint": "expo lint"
+    },
+    "jest": {
+        "preset": "jest-expo"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^14.0.2",
+        "@gorhom/bottom-sheet": "^5.1.2",
+        "@react-native-async-storage/async-storage": "^2.1.0",
+        "@react-native-community/slider": "^4.5.6",
+        "@react-native-seoul/masonry-list": "^1.4.2",
+        "@react-navigation/bottom-tabs": "^7.3.10",
+        "@react-navigation/material-top-tabs": "^7.2.10",
+        "@react-navigation/native": "^7.1.6",
+        "@react-navigation/stack": "^7.1.1",
+        "@rnmapbox/maps": "^10.1.38",
+        "@shopify/flash-list": "^1.7.3",
+        "@tanstack/react-query": "^5.64.2",
+        "@types/lodash.debounce": "^4.0.9",
+        "axios": "^1.7.9",
+        "dayjs": "^1.11.13",
+        "expo": "~52.0.23",
+        "expo-blur": "~14.0.1",
+        "expo-build-properties": "~0.13.2",
+        "expo-camera": "^16.0.14",
+        "expo-constants": "~17.0.3",
+        "expo-dev-client": "~5.0.19",
+        "expo-font": "~13.0.2",
+        "expo-haptics": "~14.0.0",
+        "expo-image": "^2.0.7",
+        "expo-image-picker": "^16.0.6",
+        "expo-linear-gradient": "^14.0.2",
+        "expo-linking": "~7.0.3",
+        "expo-location": "^18.0.10",
+        "expo-notifications": "~0.29.14",
+        "expo-router": "~4.0.20",
+        "expo-splash-screen": "~0.29.18",
+        "expo-status-bar": "~2.0.0",
+        "expo-symbols": "~0.2.0",
+        "expo-system-ui": "~4.0.6",
+        "expo-web-browser": "~14.0.1",
+        "iconsax-react-native": "^0.0.8",
+        "lodash.debounce": "^4.0.8",
+        "lottie-react-native": "^7.2.2",
+        "lucide-react-native": "^0.501.0",
+        "nativewind": "^4.1.23",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-hook-form": "^7.55.0",
+        "react-native": "0.76.9",
+        "react-native-collapsible": "^1.6.2",
+        "react-native-collapsible-tab-view": "^8.0.1",
+        "react-native-confirmation-code-field": "^7.4.0",
+        "react-native-gesture-handler": "~2.20.2",
+        "react-native-image-colors": "^2.4.0",
+        "react-native-pager-view": "^6.7.0",
+        "react-native-progress": "^5.0.1",
+        "react-native-radio-buttons-group": "^3.1.0",
+        "react-native-ratings": "^8.1.0",
+        "react-native-reanimated": "3.16.2",
+        "react-native-safe-area-context": "4.12.0",
+        "react-native-screens": "~4.4.0",
+        "react-native-svg": "^15.11.2",
+        "react-native-toast-message": "^2.2.1",
+        "react-native-vector-icons": "^10.2.0",
+        "react-native-web": "~0.19.13",
+        "react-native-webview": "13.12.5",
+        "tailwindcss": "^3.4.17",
+        "zustand": "^5.0.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@types/jest": "^29.5.12",
+        "@types/react": "~18.3.12",
+        "@types/react-native": "^0.73.0",
+        "@types/react-test-renderer": "^18.3.0",
+        "jest": "^29.2.1",
+        "jest-expo": "~52.0.2",
+        "react-native-svg-transformer": "^1.5.0",
+        "react-test-renderer": "18.3.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    },
+    "private": true
 }
