--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
         "react-dom": "18.3.1",
         "react-hook-form": "^7.55.0",
         "react-native": "0.76.9",
+        "react-native-circular-progress": "^1.4.1",
         "react-native-collapsible": "^1.6.2",
         "react-native-collapsible-tab-view": "^8.0.1",
         "react-native-confirmation-code-field": "^7.4.0",
         "react-native-gesture-handler": "~2.20.2",
-        "react-native-image-colors": "^2.4.0",
+        "react-native-image-colors": "^1.3.1",
         "react-native-pager-view": "^6.7.0",
+        "react-native-pie": "^1.1.2",
         "react-native-progress": "^5.0.1",
         "react-native-radio-buttons-group": "^3.1.0",
         "react-native-ratings": "^8.1.0",
@@ -88,6 +90,7 @@
         "@types/react-test-renderer": "^18.3.0",
         "jest": "^29.2.1",
         "jest-expo": "~52.0.2",
+        "react-native-pie-chart": "^4.0.1",
         "react-native-svg-transformer": "^1.5.0",
         "react-test-renderer": "18.3.1",
         "ts-node": "^10.9.2",
